--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --header-height: 3rem;
     /* Colors */
     /* Change favorite color */
-    --hue-color: 250;/*  Blue color */ 
+    --hue-color: 230;/*  Blue color */ 
     /* HSL Color mode */
     --first-color:hsl(var(--hue-color),69%,61%);
     --first-color-second:hsl(var(--hue-color),69%,61%);
@@ -19,6 +19,8 @@
     --input-color:hsl(var(--hue-color),70%,96%);
     --body-color:hsl(var(--hue-color),60%,99%);
     --container-color:#fff;
+    --scroll-bar-color:hsl(var(--hue-color),12%,90%);
+    --scroll-thumb-color:hsl(var(--hue-color),12%,80%);
 
     /* Font and Typography */
     --body-font: 'Poppins', sans-serif;
@@ -67,9 +69,35 @@
     }
 }
 /* Variables Dark Theme */
-
+body.dark-theme
+{
+    /* HSL Color mode */
+    --first-color-second:hsl(var(--hue-color),30%,8%);
+    --title-color:hsl(var(--hue-color),8%,95%);
+    --text-color:hsl(var(--hue-color),8%,75%);
+    --input-color:hsl(var(--hue-color),29%,16%);
+    --body-color:hsl(var(--hue-color),28%,12%);
+    --container-color:hsl(var(--hue-color),29%,16%);
+    --scroll-bar-color:hsl(var(--hue-color),12%,48%);
+    --scroll-thumb-color:hsl(var(--hue-color),12%,36%);
+}
 /* Button Dark/Light */
-
+.nav__btns
+{
+    display:flex;
+    align-items: center;
+}
+.change-theme
+{
+    font-size: 1.25rem;
+    color:var(--title-color);
+    margin-right: var(--mb-1);
+    cursor:pointer;
+}
+.change-theme:hover
+{
+    color:var(--first-color);
+}
 /* BASE */
 *
 {
@@ -185,7 +213,6 @@ img
         left:0;
         width:100%;
         background-color: var(--body-color);
-        
         padding:2rem 1.5rem 4rem;
         box-shadow:0 -1px 4px rgba(0,0,0,.15);
         border-radius: 1.5rem 1.5rem 0 0;
@@ -234,7 +261,16 @@ img
 {
     bottom:0px;
 }  
-
+/* Active Link */
+.active-link
+{
+    color:var(--first-color);
+}
+/* Change Background Colour */
+.scroll-header
+{
+    box-shadow: 20px -1px 4px rgba(0,0,0,.15);
+}
 /* HOME */
 .home__container
 {
@@ -805,4 +841,47 @@ img
 .footer__title,.footer__subtitle,.footer__link,.footer__social
 {
     color:#fff;
+}
+/* SCROLL UP */
+.scrollup
+{
+    position:fixed;
+    right:1rem;
+    bottom:-20%;
+    background-color: var(--first-color);
+    opacity:.8;
+    padding:0 .3rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition:.4s;
+}
+.scrollup:hover
+{
+    background-color: var(--first-color);
+}
+.scrollup__icon
+{
+    font-size:1.5rem;
+    color:#fff;
+}
+/* Show Scroll */
+.show-scroll
+{
+    bottom:5rem;
+}
+/* SCROLL BAR */
+::-webkit-scrollbar
+{
+    width:.60rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+}
+::-webkit-scrollbar-thumb
+{
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
+::-webkit-scrollbar-thumb:hover
+{
+    background-color: var(--text-color-light);
 }
