--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,10 @@ img
     font-size:1.25rem;
 }
 /* BUTTONS */
+button
+{
+    border:none;
+}
 .button
 {
     display:inline-block;
@@ -514,6 +518,18 @@ img
     width:80%;
 }
 .skills__python
+{
+    width:90%;
+}
+.skills__java
+{
+    width:80%;
+}
+.skills__c
+{
+    width:80%;
+}
+.skills__sql
 {
     width:90%;
 }
