--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@ img
     max-width:100%;
     height:auto;
 }
+section{
+    min-height: 100vh;
+}
 /* Reusable CSS Classes */
 .section
 {
@@ -1235,5 +1238,22 @@ button
     .contact__inputs
     {
         grid-template-columns: repeat(2,1fr);
+    }
+}
+/* Transition Effect */
+.hidden{
+    opacity : 0;
+    transition: all 2s;
+    filter: blur(5px);
+    transform: translateX(-100%);
+}
+.show{
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateX(0);
+}
+@media(prefers-reduced-motion){
+    .hidden{
+        transition : none;
     }
 }
